source/tests/errors/duplicate_param.apex
function f(x, x)
    return x